# magicnet-2d

./: .gitignore  README.md  pyproject.toml
.matplotlib/: fontlist-v390.json
.ultralytics/Ultralytics/: persistent_cache.json  settings.json
configs/mmdet/: README.md
configs/project/: default.toml  retinanet_r50_fpn_1x_coco.toml  yolov3_d53_tvdd_mmdet.toml
configs/yolo/: README.md  coco8_smoke.yaml  coco8_ultralytics.yaml  tvdd_ultralytics.yaml  tvdd_yolov8n.yaml
data/: README.md
data/yolo/coco8_ultralytics/: .source.json  README.md
prompts/: prompts01.txt  prompts02.txt
scripts/: check_env.py  download_yolo_coco8.py  infer.py  install_system_deps.py  train.py  yolo_infer.py  yolo_train.py
src/magicnet_2d/: __init__.py  cli.py  compatibility.py  config.py  environment.py  infer.py  mmdet_datasets.py  mmdet_support.py  train.py  utils.py  yolo_infer.py  yolo_support.py  yolo_train.py
tests/: test_compatibility.py  test_config.py  test_mmdet_support.py  test_utils.py  test_yolo_support.py
