[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "magicnet-2d"
version = "0.1.0"
description = "Local-first 2D detection project with MMDetection and YOLO smoke-test support."
readme = "README.md"
requires-python = ">=3.10,<3.13"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
  "numpy>=1.24,<2.0",
  "setuptools>=70.0.0,<81.0.0",
  "tensorboard>=2.16,<3.0",
  "tomli>=2.0.1; python_version < '3.11'",
]

[project.optional-dependencies]
cpu = [
  "mmdet==3.3.0",
  "mmengine>=0.10.4,<1.0.0",
  "openmim>=0.3.9",
  "torch==2.1.0",
  "torchvision==0.16.0",
]
dev = [
  "pytest>=8.2,<9.0",
]
yolo = [
  "ultralytics>=8.3,<9.0",
]

[project.scripts]
magicnet = "magicnet_2d.cli:main"
magicnet-train = "magicnet_2d.train:main"
magicnet-infer = "magicnet_2d.infer:main"
magicnet-check-env = "magicnet_2d.environment:main"
magicnet-yolo-train = "magicnet_2d.yolo_train:main"
magicnet-yolo-infer = "magicnet_2d.yolo_infer:main"

[tool.hatch.build.targets.wheel]
packages = ["src/magicnet_2d"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.uv]
package = true
